--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>Chuuuuupa, fiz meu site na mão! : P</p>
 </body>
 </html>
+//Bisbilhoteiroooooooooo!
+//O que tá fazendo aqui?
