--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>"GG"eovani Weizenmann</h1>
+<h1>Hello World Mota Fuckers</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p>Chuuuuupa, fiz meu site na mão! : P</p>
+<p>Chuuuuupa, fiz meu site na mao! : P</p>
 </body>
 </html>
-//Bisbilhoteiroooooooooo!
-//O que tá fazendo aqui?
+<!--Bisbilhoteiroooooooooo!-->
+<!--O que tá fazendo aqui?-->
