Cor de fundo e de umas imagens

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <script src="TemplateData/UnityProgress.js"></script>
   </head>
-  <body class="template">    
+  <body class="template">
+	
     <h1>"GG"eovani Weizenmann</h1>
     <h1>Hello World Mota Fuckers</h1>
     <p>Chuuuuupa, fiz meu site na mao! : P</p>
-    <p>Tu usando o GitHub como host truta.</p>
-    <p>Manjo muito dos paranaue</p>  
+    <p>To usando o GitHub como host truta.</p>
+    <p>Manjo muito dos paranaue</p>
+  
     <p class="header"><span>Unity WebGL Player | </span>Teste_WebGL</p>
     <div class="template-wrap clear">
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas>
