Versão para a Atomic
Muitas imagens a mais dentre outras coisas.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en-us">
   <head>  
     <meta charset="utf-8">
@@ -12,32 +12,41 @@
 	
     <h1>"GG"eovani Weizenmann</h1>
 	<br/>
-	<h1>"Eu faço coisas sem vida, tocar na sua."</h1>
+	<h1>"Em construção, estou aprendendo ainda, sozinho."</h1>
+	<h1>"Então não liguem para os tons diferentes de amarelo dentre outras coisas."</h1>
+	<h1>"O site fiz na mão, hospdei no github de graça, então me deem um desconto pela determinação :P"<h1/>
 	<br/>
+
 	<h2>Sobre mim:</h2>
+
 	<p>Quinto semestre em <b>Jogos Digitais</b> na <b>Unisinos</b>.</p>
 	<p>Quer trabalhar como <b>Game Designer</b>.</p>
 	<p>Mas está feliz com qualquer emprego relacionado à <b>jogos</b>.</p>
+
+	<br>
+	<p> <img src="Stars.png"/> </p>
 	<br/>
-	<h2>Habilidades:</h2>
-	<p><b>Game Design:</b> 4/5</p>
-	<p><b>Level Design:</b> 4/5</p>
-	<p><b>Conveyance:</b> 4/5</p>
-	<p><b>C++:</b> 3/5</p>
-	<p><b>HTML:</b> 2/5</p>
-	<p><b>CSS:</b> 2/5</p>
-	<p><b>Unity:</b> 3/5</p>
-	<p><b>Inkscape (arte vetorial):</b> 3/5</p>
-	<p><b>Audacity:</b> 2/5</p>
-	<p><b>LMMS (música):</b> 2/5</p>
-	<p><b>Photoshop/Paint.NET:</b> 1/5</p>
+
+	<h2>Exemplos de minhas artes:</h2>
+
+	<br>
+	<p> <img src="Art.png"/> </p>
 	<br/>
+
+	<br>
+	<p> <img src="MoiraFanArt.png"/> </p>
+	<br/>
+
+	<br>
 	<h2>Prêmios:</h2>
 	<p><b>Segundo lugar na POAJAM</b>, GameJam realizada pela Unirriter</p>
 	<p>Sendo o <b>único que trabalhou sozinho</b>.</p>
 	<p><b>Notícia:</b> <a href="http://www.uniritter.edu.br/noticias/blog/maratona-poa-jam-da-uniritter-disponibiliza-games-para-download-gratuito"target="blank">Clique aqui</a></p>
 	<p><b>Notas dos jurados:</b> <a href="https://docs.google.com/spreadsheets/d/1ZXrBp5Y-6D7KCPB-ic22N4tqcSydpGsB09b30Dwtmzc/edit?pref=2&pli=1#gid=0"target="_blank">Clique aqui</a></p>
 	<!--target="_blank" faz com que abra o link em uma nova aba. Se eu não quiser isso é só deletar.-->
+	
+
+
 	<p><b>Email:</b> geovaniweizenmann@gmail.com</p>
 	<br/>
 	<h2>Projeto atual:</h2>
@@ -60,7 +69,7 @@
     codeUrl: "Release/Desktop.js",
     memUrl: "Release/Desktop.mem",
   };
-</script>0
+</script>
 <script src="Release/UnityLoader.js"></script>
 
   </body>
@@ -70,5 +79,5 @@
 <!--O que tah fazendo aqui?-->
 <!--Bom, já que ta aqui, sabe o que significa GG?-->
 <!--Isso mesmo!-->
-<!--Geovani Game Designer!-->
+<!--"G"eovani "G"ame designer!-->
 <!--Como você é esperto! ^^-->
