Alterei o tamanho da arte do moira  e adicionei um titulo

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	<p> <img src="Art.png"/> </p>
 	<br/>
 
+	<h3>Fan Art do jogo Moira</h3>
+
 	<br>
 	<p> <img src="MoiraFanArt.png"/> </p>
 	<br/>
