--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<p> <img src="Art.png"/> </p>
 	<br/>
 
-	<h3>Fan Art do jogo Moira</h3>
+	<h3>Fan Art do jogo Moira (a seguir):</h3>
 
 	<br>
 	<p> <img src="MoiraFanArt.png"/> </p>
